# undocking

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  docker-compose.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  schema.sql
api/src/ship_api/: __init__.py  auth.py  config.py  instructions.py  main.py  markdown.py  models.py  schemas.py  session_auth.py  storage.py
api/src/ship_api/mcp/: server.py
api/src/ship_api/routes/: admin.py  auth.py  deployments.py  events.py  serve.py
api/src/ship_api/services/: api_keys.py  deployments.py  users.py
api/src/undocking_api/: __init__.py  auth.py  config.py  database.py  instructions.py  logging_config.py  main.py  models.py  oauth.py  proxy_auth.py  schemas.py  slug.py  storage.py
api/src/undocking_api/mcp/: server.py
api/src/undocking_api/routes/: admin.py  auth.py  deployments.py  events.py  serve.py  uploads.py
api/src/undocking_api/services/: api_keys.py  deployments.py  workspaces.py
api/tests/: conftest.py  test_admin_routes.py  test_api_keys_service.py  test_auth.py  test_deployments_routes.py  test_deployments_service.py  test_docs.py  test_events_routes.py  test_markdown.py  test_proxy_auth.py  test_serve_routes.py  test_slug.py  test_users_service.py  test_workspaces_service.py
docs/: agent-upload-guide.md  nextjs_best_practices.md  onboarding-plan.md  python_best_practices.md  ship-plan.md  undocking-plan.md
web/: README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
web/src/: proxy.ts
web/src/app/: globals.css  layout.tsx  page.tsx
(+17 files in other folders)
