[project]
name = "undocking-api"
version = "0.1.0"
description = "Deployment platform for HTML/Markdown artifacts. Upload via REST or MCP, get a public URL."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "boto3>=1.34",
    "cachetools>=5.3",
    "markdown-it-py>=3.0",
    "nh3>=0.2",
    "mcp>=1.0",
    "authlib>=1.3",
    "httpx>=0.27",
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/undocking_api"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's dependency-injection relies on calling Depends()/Query() in
# argument defaults; it's the documented, idiomatic pattern.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# The HTML wrapper embeds a long single-line CSS block by design.
"src/undocking_api/markdown.py" = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
